--- a/.github/workflows/spell_checking.yml
+++ b/.github/workflows/spell_checking.yml
@@ -21,7 +21,7 @@ jobs:
           pip install codespell
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Check spelling with codespell
-        run: codespell --ignore-words=codespell.txt || exit 1
+        run: codespell --ignore-words=cs-ignorewords.txt --exclude-file=cs-excludelines.txt || exit 1
   misspell:
     name: Check spelling with misspell
     runs-on: ubuntu-latest
